overflow-x fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,7 @@ html {
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 /**
